# dexterCLI

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yml
dexterCLI/: __init__.py  __main__.py  api.py  cli.py  commands.py
