[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0"]

[project]
authors = [
  { name="Jon Ribbens", email="jribbens@unceasing.dev" },
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "brotli>=1.0.9",
  "requests>=2"
]
description = "A command-line interface to the Dexter API"
license = { file="LICENSE" }
name = "dexterCLI"
readme = "README.md"
requires-python = ">=3.10"
version = "0.0.3"

[project.scripts]
dexter = "dexterCLI:__main__"

[project.urls]
"Bug Tracker" = "https://github.com/unceasing-dev/dexterCLI/issues"
"Homepage" = "https://github.com/unceasing-dev/dexterCLI#README"

[project.optional-dependencies]
dev = [
  "mypy<2",
  "pre-commit<5",
  "ruff<0.15",
  "types-requests<3",
]

[tool.mypy]
strict = true

[tool.ruff]
line-length = 78

[tool.ruff.lint]
ignore = [
  "COM812",  # no, we're not pointlessly adding unnecessary commas everywhere
  "CPY",  # no, we don't need a copyright notice in every file
  "D203",  # no, we don't want pointless blank lines before docstrings
  "D212",  # D212 and D213 are contradictory, and D213 is better
  "DOC",  # docstring conventions that we're not using
  "EM",  # stupid rule saying you can't use a literal in an exception message
  "PLR1730",  # no, max() and min() are not 'easier to read'
  "PLR2004",  # no, not all constants are 'magic'
  "PLW2901",  # this is Python not C, we can alter 'for' loop variables
  "T201",  # we're a command-line utility, we deliberately use 'print()'
  "TRY003",  # no, exceptions with messages are not bad
]
preview = true
select = ["ALL"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.isort]
force-sort-within-sections = true

[tool.ruff.lint.mccabe]
max-complexity = 20

[tool.ruff.lint.pep8-naming]
extend-ignore-names = [
  "dexterCLI"
]

[tool.ruff.lint.pylint]
max-args = 8
max-branches = 25
max-statements = 75

[tool.ruff.format]
quote-style = "single"
line-ending = "lf"
